--- a/src/styles/WeatherDashboard.scss
+++ b/src/styles/WeatherDashboard.scss
@@ -108,5 +108,10 @@
             scrollbar-color: #409AC7 transparent;
         }
 
+
+        .react-multi-carousel-track {
+            gap: 24px;
+        }
+
     }
 }
