--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -5,7 +5,7 @@ $image-about-path: '../assets/city-florida.jpg';
 
     .about-intro {
         h4 {
-            font-size: 62px;
+            font-size: 52px;
 
             .about_icon {
                 color: rgb(255, 179, 0);
@@ -18,32 +18,37 @@ $image-about-path: '../assets/city-florida.jpg';
         }
     }
 
-    .about_result-image {
-        width: 100%;
-        border: 4px solid #000;
-        border-radius: 32px;
-    }
+    .about_result {
+        .about_result-image {
+            width: 100%;
+            height: 100%;
+            object-fit: fill;
+            border: 4px solid #000;
+            border-radius: 32px;
+        }
 
-    .about_result-lists {
-        height: 518px;
-        text-align: center;
-        padding: 32px;
-        background-color: #000000;
-        border-radius: 32px;
+        .about_result-lists {
+            height: 100%;
+            text-align: center;
+            padding: 32px;
+            background-color: #000000;
+            border-radius: 32px;
 
-        .result-item {
-            height: 150px;
-            border-bottom: 1px solid #ccc;
-            margin-bottom: 18px;
+            .result-item {
+                min-height: 80px;
+                border-bottom: 1px solid #ccc;
+                margin-bottom: 8%;
+                padding: 8% 0;
 
-            h2 {
-                color: #4cb7fd;
-                font-size: 58px;
-            }
+                h2 {
+                    color: #4cb7fd;
+                    font-size: 34px;
+                }
 
-            h5 {
-                color: #b6e2ff;
-                font-size: 22px;
+                h5 {
+                    color: #b6e2ff;
+                    font-size: 16px;
+                }
             }
         }
     }
@@ -55,8 +60,10 @@ $image-about-path: '../assets/city-florida.jpg';
             overflow: hidden;
 
             img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
                 border-radius: 32px;
-                height: 518px;
             }
         }
     }
@@ -84,14 +91,11 @@ $image-about-path: '../assets/city-florida.jpg';
     align-items: center;
     margin: 8% 0;
 
-    overflow: hidden;
-
     .f-7 {
         width: 70%;
     }
 
     .f-3 {
-        overflow: hidden;
         width: 30%;
     }
 }
@@ -127,5 +131,153 @@ $image-about-path: '../assets/city-florida.jpg';
         .about_icon {
             margin-bottom: -4px;
         }
+    }
+}
+
+
+@media (max-width: 768px) {
+    .about-container {
+        margin: 0 6%;
+
+        .flex-7-3 {
+
+            flex-direction: column;
+
+            .f-7 {
+                width: 100%;
+            }
+
+            .f-3 {
+                width: 100%;
+            }
+        }
+
+        .about-intro {
+
+            h4 {
+                font-size: 28px;
+            }
+
+            p {
+                font-size: 18px;
+            }
+        }
+
+        .about_result {
+
+            .about_result-lists {
+                padding: 12px;
+                display: flex;
+                justify-content: space-around;
+
+                .result-item {
+                    margin-bottom: 0;
+                    padding: 4% 0;
+                    border-bottom: none;
+                    width: 33%;
+
+                    h2 {
+                        font-size: 28px;
+                    }
+
+                    h5 {
+                        font-size: 14px;
+                    }
+                }
+
+                .result-item+.result-item {
+                    border-left: 1px solid #ccc;
+
+                }
+
+            }
+        }
+
+        .about_img-lists {
+            .flex-7-3 {
+
+                flex-direction: row;
+
+                .f-7 {
+                    width: 70%;
+                }
+
+                .f-3 {
+                    width: 30%;
+                }
+            }
+        }
+
+        .about_core {
+            .core_content {
+                h4 {
+                    font-size: 32px;
+                    padding-bottom: 12px;
+                }
+
+                p {
+                    font-size: 18px;
+                }
+            }
+        }
+
+    }
+
+    .about-hero {
+        .hero_title {
+            font-size: 60px;
+        }
+
+        .hero_desc {
+            font-size: 18px;
+        }
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    .about-container {
+        .about-intro {
+            h4 {
+                font-size: 42px;
+            }
+
+            p {
+                font-size: 20px;
+            }
+        }
+
+        .about_result {
+
+            .about_result-lists {
+                padding: 12px;
+
+                .result-item {
+                    margin-bottom: 0;
+
+                    h2 {
+                        font-size: 28px;
+                    }
+
+                    h5 {
+                        font-size: 14px;
+                    }
+                }
+
+            }
+        }
+
+        .about_core {
+            .core_content {
+                h4 {
+                    font-size: 32px;
+                    padding-bottom: 12px;
+                }
+
+                p {
+                    font-size: 18px;
+                }
+            }
+        }
+
     }
 }
