--- a/src/styles/CardWheather.scss
+++ b/src/styles/CardWheather.scss
@@ -1,11 +1,14 @@
 .card-weather {
-    height: 420px;
+    height: 100%;
     background-color: var(--primary);
     width: 300px;
     padding: 24px;
     border-radius: 24px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     .header {
         display: flex;
@@ -27,10 +30,9 @@
 
     .title {
         text-align: center;
-        font-size: 68px;
+        font-size: 8vh;
         font-weight: 800;
         margin-left: 18px;
-        // padding: 12px 0;
 
 
         .icon {
@@ -39,7 +41,14 @@
     }
 
     .img {
-        margin-top: -36px;
+        // margin-top: -36px;
+        height: 50%;
+
+        img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
     }
 
     .footer {
