--- a/src/styles/pageHome.scss
+++ b/src/styles/pageHome.scss
@@ -1,13 +1,13 @@
 $my-image-path: '../assets/home_bg.png';
 
 .home-title {
-    font-size: 48px;
+    font-size: 42px;
     font-weight: 400;
 }
 
 .home-desc {
     letter-spacing: 1.5px;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.4;
     font-weight: 300;
     margin: 24px;
@@ -19,6 +19,19 @@ $my-image-path: '../assets/home_bg.png';
     width: 100%;
 }
 
+.wrapper-reverse {
+    flex-direction: row-reverse;
+
+}
+
+.mb {
+    margin-bottom: 160px;
+}
+
+.mt {
+    margin-top: 160px;
+}
+
 .hero-wrapper {
     height: 100vh;
     background: url($my-image-path);
@@ -27,7 +40,9 @@ $my-image-path: '../assets/home_bg.png';
     background-position: bottom;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     color: #000;
+    overflow: hidden;
 
     .hero-content {
         width: 40%;
@@ -36,7 +51,7 @@ $my-image-path: '../assets/home_bg.png';
         justify-content: center;
 
         .hero-title {
-            font-size: 62px;
+            font-size: 48px;
             font-weight: 400;
 
         }
@@ -72,143 +87,162 @@ $my-image-path: '../assets/home_bg.png';
         flex-direction: column;
         justify-content: center;
         color: #fff;
-
+        height: 60%;
 
     }
 }
 
-
-.about-wrapper {
-    display: flex;
-    justify-content: space-between;
-    padding: 158px 0;
-    margin: 0 76px;
-    position: relative;
-
-    .about-info {
-        width: 40%;
-
-        .info-title {
-            font-size: 38px;
-            padding: 24px 0;
-        }
-
-        .info-desc {
-            letter-spacing: 1.5px;
-            font-size: 18px;
-            line-height: 1.4;
-            font-weight: 300;
-        }
-
-        .about-btn {
-            font-size: 22;
-            font-weight: 600;
-            margin-top: 24px;
-            padding: 12px 48px;
-            border-radius: 24px;
-            color: #fff;
-            background-color: var(--primary);
-        }
-    }
-
-    .about-image {
-
-        img {
-            height: 700px;
-            border-radius: 48px;
-        }
-    }
-
-    .weather {
-        img {
-            height: 500px;
-            border-radius: 48px;
-        }
-    }
-
-    .about-card {
-        position: absolute;
-        bottom: 10%;
-        right: 36%;
-    }
-}
-
-.wrapper-reverse {
-    flex-direction: row-reverse;
-
-}
-
-.forecast {
-    margin: 0 76px;
+.home-wrapper {
+    margin: 0 12%;
 
 
 
-    .countries-wrapper {
+    .about-wrapper {
         display: flex;
-        gap: 36px;
-        flex-wrap: wrap;
+        justify-content: space-between;
+        position: relative;
 
-        .country {
-            width: 240px;
+        .about-info {
+            width: 50%;
+
+            .info-title {
+                font-size: 36px;
+                padding: 24px 0;
+            }
+
+            .info-desc {
+                letter-spacing: 1.5px;
+                font-size: 18px;
+                line-height: 1.4;
+                font-weight: 300;
+            }
+
+            .about-btn {
+                font-size: 22;
+                font-weight: 600;
+                margin-top: 24px;
+                padding: 12px 48px;
+                border-radius: 24px;
+                color: #fff;
+                background-color: var(--primary);
+            }
+        }
+
+        .about-image {
+            width: 40%;
+
+            img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                border-radius: 48px;
+            }
+        }
+    }
+
+
+
+    .forecast {
+        // margin: 0 76px;
+
+        .countries-wrapper {
+            display: flex;
+            gap: 24px;
+            flex-wrap: wrap;
+            justify-content: center;
+            overflow: hidden;
+
+            .country {
+                width: 18%;
+                height: 60px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 0 12px;
+                font-size: 16px;
+                border-radius: 36px;
+                border: 1px solid #dedede;
+                box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+                overflow: hidden;
+
+                &:hover {
+                    cursor: pointer;
+                    opacity: 0.7;
+                }
+
+                .country_container {
+                    display: flex;
+                    align-items: center;
+                    overflow: hidden;
+
+                    .flag {
+                        height: 30px;
+                        width: 30px;
+                        margin: 0 12px;
+                    }
+                }
+
+                .country-icon {
+                    // margin-left: 32px;
+                }
+
+            }
+        }
+    }
+
+    .new-wrapper {
+
+        .new-cards {
             display: flex;
             justify-content: space-around;
-            align-items: center;
-            padding: 12px;
-            font-size: 18px;
-            border-radius: 36px;
-            border: 1px solid #dedede;
-            box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+            gap: 24px;
+        }
+    }
 
-            &:hover {
-                cursor: pointer;
-                opacity: 0.7;
-            }
+    .contact-wrapper {
 
-            .country_container {
+        .wrapper {
+            background-color: var(--primary);
+            padding: 48px;
+            border-radius: 32px;
+            color: #fff;
+
+            .contact-form {
+                margin-top: 24px;
                 display: flex;
-                align-items: center;
+                flex-direction: row;
 
-                .flag {
-                    height: 30px;
-                    width: 30px;
-                    margin-right: 12px;
+                .contact-input {
+                    width: 80%;
+
+                    input {
+                        font-size: 22px;
+                    }
+                }
+
+                .contact-btn {
+                    width: 20%;
+                    height: 48px;
+                    border: 2px solid #fff;
+                    border-radius: 48px;
+                    font-weight: 600;
+                    color: #fff;
+                    margin-top: 12px;
                 }
             }
-
-            .country-icon {
-                margin-left: 32px;
-            }
-
         }
     }
 }
 
-.contact-wrapper {
-    padding: 158px 76px;
+/* Mobile styles */
+@media (max-width: 480px) {}
 
-    .wrapper {
-        background-color: var(--primary);
-        padding: 48px;
-        border-radius: 32px;
-        color: #fff;
+/* Tablet styles */
+@media (min-width: 481px) and (max-width: 768px) {}
 
-        .contact-form {
-            margin-top: 24px;
-            display: flex;
-            flex-direction: row;
-
-            .contact-input {
-                width: 80%;
-                font-size: 36px;
-            }
-
-            .contact-btn {
-                width: 20%;
-                border: 2px solid #fff;
-                border-radius: 48px;
-                font-weight: 600;
-                color: #fff;
-            }
-        }
+/* Laptop styles */
+@media (min-width: 769px) and (max-width: 1024px) {
+    .home-title {
+        color: red;
     }
 }
