--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -4,12 +4,14 @@
     justify-content: space-between;
     padding: 32px 8%;
 
+
     .nav-logo {
         font-size: 28px;
         pointer-events: none;
         user-select: none;
         color: #000;
         padding: 12px;
+        width: 20%;
 
         span {
             color: var(--primary);
@@ -57,4 +59,72 @@
         }
 
     }
+}
+
+@media (max-width: 1024px) {
+
+    .home-header {
+
+        .header-wrapper {
+            padding: 24px 4%;
+
+            .nav-wrapper {
+
+                .nav-btn {
+                    padding: 12px;
+                }
+            }
+        }
+    }
+
+}
+
+@media (max-width: 768px) {
+    .home-header {
+        .header-menu {
+            display: block;
+            position: absolute;
+            top: 28%;
+            right: 4%;
+            z-index: 9999;
+        }
+
+        .header-wrapper {
+            .nav-wrapper {
+
+                display: none;
+            }
+        }
+
+        .open {
+
+            .header-wrapper {
+
+                .nav-wrapper {
+                    position: absolute;
+                    top: 12%;
+                    right: 2%;
+                    background-color: rgba(209, 251, 255, 0.6);
+                    display: flex;
+                    flex-direction: column;
+                    padding: 32px;
+                    border-radius: 24px;
+
+                    .nav-btn {
+                        color: #000;
+                        font-weight: 500;
+                        font-size: 20px;
+                    }
+
+                    .icon {
+                        width: 40px;
+                        margin: 0 auto;
+                    }
+                }
+
+
+            }
+        }
+    }
+
 }
