--- a/src/styles/WeatherDashboard.scss
+++ b/src/styles/WeatherDashboard.scss
@@ -50,6 +50,7 @@
                 align-items: center;
                 position: relative;
                 max-width: 460px;
+                width: 80%;
 
                 input {
                     background-color: #EFF3F9;
