--- a/src/styles/WeatherDashboard.scss
+++ b/src/styles/WeatherDashboard.scss
@@ -25,7 +25,7 @@
 
     .container-dashboard {
         width: 86%;
-        background-color: #EFF3F9;
+        // background-color: #EFF3F9;
 
         .search-dashboard {
             background-color: #fff;
